--- a/src/main/resources/upload.properties
+++ b/src/main/resources/upload.properties
@@ -1,1 +1,1 @@
-upload=E:\\Khanh\\Modul_4\\Leson12\\homestay_management_group\\src\\main\\webapp\\image\\
+upload=/Users/admin/Module4/BaiTapNhom/homestay_btvn/src/main/webapp/image/
